--- a/tauri-app/src/locales/en.yml
+++ b/tauri-app/src/locales/en.yml
@@ -10,6 +10,7 @@ ui:
   duration: "Duration"
   swtich: "Switch Role"
 game:
+  boss: "BOSS"
   status: "Status"
   level: "Level"
   level_up: "Level Up"
